--- a/quiz.css
+++ b/quiz.css
@@ -1,11 +1,14 @@
-/*.bg {
+.bg {
     background-color: none;
     background-image: ("bloody.png");
-    background-repeat: repeat;
     background-position: top left;
     background-attachment: fixed;
-}*/
+}
+body {
+  font-family: cursive;
+  background-color: darkgrey;
 
+}
 img {
   image-orientation: center;
 }
@@ -17,7 +20,6 @@ h1 {
 h2 {
     color: black;
     text-align: center;
-    
     font-size: 20px;
 }
 
